# data-universe

./: .env  .gitignore  .gitmodules  .postgres.env  .pre-commit-config.yaml  CONTRIBUTING.md  DEDUP_POOL_TEST_PLAN.md  LICENSE  LLM.md  LOCAL_MINIO_SETUP.md  README.md  VALIDATION_SPEED_PLAN.md  data_universe_api.py  debug.sqlite  debug2.sqlite  docker-compose.postgres.yml  my_preferences.json  mydb  on_demand_api.py  pyproject.toml  requirements.txt  setup.py  test.txt
common/: __init__.py  api_client.py  constants.py  data.py  data_v2.py  date_range.py  huggingface.py  logger.py  metagraph_syncer.py  monitoring.py  old_data.py  old_protocol.py  organic_protocol.py  protocol.py  pydantic_dict_encoder.py  utils.py
docs/: apify.md  dd_validator_instructions.md  dynamic_desirability.md  gravity_guide.md  hugging_face_validation.md  huggingface_setup.md  miner.md  miner_policy.md  od_reward_formula.md  on_demand.md  reddit.md  s3_validation.md  scoring.md  tumblr.md  validator.md  youtube.md
dynamic_desirability/: chain_config.py  chain_utils.py  constants.py  data.py  default.json  desirability_retrieval.py  desirability_uploader.py  gravity_config.py  json_maker.ipynb  json_uploader.py  my_preferences.json  total.json
huggingface_utils/: dataset_card.py  encoding_key.json  encoding_system.py  huggingface_setup.md  huggingface_uploader.py  private_encoding_key.json  s3_utils.py  utils.py
neurons/: __init__.py  base_neuron.py  config.py  miner.py  validator.py
organic/: gravity_organic.py
rewards/: data.py  data_desirability_lookup.py  data_value_calculator.py  (+3 more)
(+224 files in other folders)
