[tool.poetry]
name = "Data-Universe"
version = "1.5.9"
description = "Web-Scale Scraping"
authors = ["Macrocosmos <macro@macrocosmos.ai>"]

[tool.poetry.dependencies]
python = "3.10.14"
apify-client = "1.6.1"
asyncpraw = "7.7.1"
bittensor = "6.9.3"
jupyter = "1.0.0"
numpy = "1.26.2"
pydantic = "1.10.0"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
rich = "13.7.0"
torch = "2.1.2"
wandb = "0.16.2"
pandas = "~2.2.2"
huggingface-hub = "~0.23.3"
datasets = "~2.20.0"
matplotlib = "^3.9.1.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
